# kan_ts

./: .gitignore  README.md  evaluate.py  forecast_main.py  main.py  plot_learned_kan.py  pyproject.toml  requirements.txt
config/: config.yaml
lightning_logs/version_0/: events.out.tfevents.1767629847.L0177440.27168.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1767629996.L0177440.7968.0
lightning_logs/version_2/: events.out.tfevents.1767630299.L0177440.25980.0
src/data/: chronos_dataset.py  datamodule.py
src/models/: efficient_kan.py  forecast_model.py  kan_contrastive.py  lightning_kan.py  lightning_model.py
src/utils/: normalization.py  wavelet_transform.py
tests/: test_chronos_dataset.py  test_datamodule.py  test_forecast_model.py  test_kan_model.py  test_lightning_kan.py  test_normalization.py  test_wavelet.py
